--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
+    "vuetify-image-input": "^19.1.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
