--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "firebase": "^8.1.1",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
