--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "firebase": "^8.1.1",
+    "jspdf": "^2.3.0",
+    "jspdf-autotable": "^3.5.13",
     "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
